# autovj

./: .gitignore  README.md  main.py  pyproject.toml
backend/: __init__.py  main.py  settings.py
backend/agent/: graph.py  prompt.py  schema.py
backend/realtime/: websocket.py
backend/strategy/: __init__.py  capability.py  engine.py  validator.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: config.ts  main.tsx  style.css  vite-env.d.ts
frontend/src/app/: App.css  App.tsx
frontend/src/audio/: analyzer.ts  audioEngine.ts
frontend/src/contract/: visualContract.ts
frontend/src/realtime/: backendConnection.test.ts  backendConnection.ts  socket.ts
frontend/src/visual/: moduleLoader.ts  moduleTypes.ts  moduleValidator.ts  runtime.ts  runtimeTypes.ts  visualApi.ts
frontend/src/visual/background/: p5Layer.ts
frontend/src/visual/foreground/: defaultModels.ts  modelRegistry.ts  threeLayer.ts  transition.ts
shared/: visual-module-contract.md
tests/: test_agent_settings.py  test_agent_trace_payloads.py  test_prompt_diversity.py  test_visual_motion_guidance.py
