[project]
name = "autovj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=1.2.15",
    "langgraph>=1.1.9",
    "pydantic>=2.13.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
autovj-api = "backend.main:run"
